final visual tweaks

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Home Screen -->
     <div id="homeScreen" class="screen">
-        <div class="container-fluid h-100 d-flex flex-column justify-content-center align-items-center px-4">
+        <div class="container-fluid h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5">
             <!-- App Icon -->
             <div class="app-icon mb-3">
                 <i class="bi bi-bullseye"></i>
