History view & actual vs planned improvments

--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
                     <!-- Details will be rendered here -->
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" id="deleteWorkoutBtn">
+                    <button type="button" class="btn btn-outline-danger" id="deleteWorkoutBtn">
                         <i class="bi bi-trash"></i> Delete
                     </button>
-                    <button type="button" class="btn btn-primary" id="useTemplateBtn">
+                    <button type="button" class="btn btn-primary flex-fill" id="useTemplateBtn">
                         <i class="bi bi-file-earmark-plus"></i> Use as Template
                     </button>
                 </div>
