excercise history bview

--- a/index.html
+++ b/index.html
@@ -246,6 +246,24 @@
         </div>
     </div>
 
+    <!-- Exercise History Modal -->
+    <div class="modal fade" id="exerciseHistoryModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-fullscreen-sm-down">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exerciseHistoryTitle">Exercise History</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body" id="exerciseHistoryBody">
+                    <!-- History will be rendered here -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Add Exercise Modal -->
     <div class="modal fade" id="addExerciseModal" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
