Nav hide, Excercise history, Complete sets

--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
                 <span>Settings</span>
             </button>
         </div>
+
+        <!-- Toggle UI Button (Workout Screen Only) -->
+        <button id="toggleUIBtn" class="toggle-ui-btn" onclick="toggleWorkoutUI()" title="Toggle header/footer">
+            <i class="bi bi-eye-slash"></i>
+        </button>
     </div>
 
     <!-- Settings Screen -->
