fix historic date issue, fix history icon styling

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span>Start Workout</span>
                 </button>
                 <button class="glass-btn glass-btn-secondary mb-3" onclick="showHistoryScreen()">
-                    <i class="bi bi-clock-history"></i>
+                    <i class="bi bi-graph-up"></i>
                     <span>View History</span>
                 </button>
                 <button class="glass-btn glass-btn-secondary" onclick="showSettingsScreen()">
@@ -82,7 +82,7 @@
             </button>
             <button class="nav-item active">
                 <div class="nav-icon-wrapper">
-                    <i class="bi bi-clock-history"></i>
+                    <i class="bi bi-graph-up"></i>
                 </div>
                 <span>History</span>
             </button>
@@ -135,7 +135,7 @@
             </button>
             <button class="nav-item" onclick="showHistoryScreen()">
                 <div class="nav-icon-wrapper">
-                    <i class="bi bi-clock-history"></i>
+                    <i class="bi bi-graph-up"></i>
                 </div>
                 <span>History</span>
             </button>
@@ -215,7 +215,7 @@
             </button>
             <button class="nav-item" onclick="showHistoryScreen()">
                 <div class="nav-icon-wrapper">
-                    <i class="bi bi-clock-history"></i>
+                    <i class="bi bi-graph-up"></i>
                 </div>
                 <span>History</span>
             </button>
