--- a/index.html
+++ b/index.html
@@ -208,6 +208,35 @@
                 </div>
                 <p class="text-muted text-center py-3">Coming soon...</p>
             </div>
+
+            <!-- Data Management Section -->
+            <div class="settings-section">
+                <div class="settings-section-header">
+                    <h6><i class="bi bi-database"></i> Data Management</h6>
+                </div>
+                
+                <div class="data-management-buttons">
+                    <button class="btn btn-outline-light w-100 mb-2" onclick="showDataBrowser('history')">
+                        <i class="bi bi-clock-history"></i> Edit Workout History
+                    </button>
+                    <button class="btn btn-outline-light w-100 mb-2" onclick="showDataBrowser('exercises')">
+                        <i class="bi bi-bookmark-star"></i> Edit Exercise Library
+                    </button>
+                    <button class="btn btn-outline-light w-100 mb-3" onclick="showDataBrowser('current')">
+                        <i class="bi bi-activity"></i> Edit Current Workout
+                    </button>
+                    
+                    <div class="d-flex gap-2">
+                        <button class="btn btn-outline-success flex-fill" onclick="exportAllData()">
+                            <i class="bi bi-download"></i> Export
+                        </button>
+                        <button class="btn btn-outline-warning flex-fill" onclick="triggerImport()">
+                            <i class="bi bi-upload"></i> Import
+                        </button>
+                        <input type="file" id="importFileInput" accept=".json" style="display:none" onchange="importData(event)">
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Bottom Navigation -->
@@ -373,6 +402,48 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     <button type="button" id="saveExerciseLibraryBtn" class="btn btn-primary">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Data Browser Modal -->
+    <div class="modal fade" id="dataBrowserModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-fullscreen-sm-down">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="d-flex align-items-center gap-2">
+                        <button class="btn btn-sm btn-outline-secondary d-none" id="dataBrowserBackBtn" onclick="dataBrowserBack()">
+                            <i class="bi bi-arrow-left"></i>
+                        </button>
+                        <h5 class="modal-title" id="dataBrowserTitle">Data Browser</h5>
+                    </div>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body p-0">
+                    <div id="dataBrowserBreadcrumb" class="breadcrumb-nav px-3 py-2 d-none"></div>
+                    <div id="dataBrowserContent" class="data-browser-list">
+                        <!-- Content rendered dynamically -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Record Editor Modal -->
+    <div class="modal fade" id="recordEditorModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-fullscreen-sm-down">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="recordEditorTitle">Edit Record</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body" id="recordEditorBody">
+                    <!-- Form rendered dynamically -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" id="saveRecordBtn" class="btn btn-primary" onclick="saveRecordChanges()">Save</button>
                 </div>
             </div>
         </div>
