--- a/index.html
+++ b/index.html
@@ -619,6 +619,27 @@
         </div>
     </div>
 
+    <!-- Swap Exercise Modal -->
+    <div class="modal fade" id="swapExerciseModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-fullscreen-sm-down">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Swap Excercise</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Swap Exercise Content -->
+                    <div id="swapExerciseContent">
+                        <!-- Content rendered dynamically -->
+                        <div id="swapOptionsContainer">
+                            <!-- Swap options rendered here -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app.js"></script>
 </body>
