home screen fix, continue workout

--- a/index.html
+++ b/index.html
@@ -43,9 +43,17 @@
                     <i class="bi bi-robot"></i>
                     <span id="coachBtnText">AI Coach Workout</span>
                 </button>
+                 <button class="glass-btn glass-btn-secondary mb-3" onclick="showCoachPreferencesModal()">
+                    <i class="bi bi-sliders"></i>
+                    <span>AI Custom Coach Workout</span>
+                </button>
                 <button id="startWorkoutBtn" class="glass-btn glass-btn-secondary mb-3">
                     <i class="bi bi-play-circle-fill"></i>
                     <span>Start Blank Workout</span>
+                </button>
+                <button id="continueWorkoutBtn" class="glass-btn glass-btn-secondary mb-3">
+                    <i class="bi bi-arrow-repeat"></i>
+                    <span>Continue Workout</span>
                 </button>
                 <button class="glass-btn glass-btn-secondary mb-3" onclick="showCoachPreferencesModal()">
                     <i class="bi bi-sliders"></i>
